--- a/Public/index.html
+++ b/Public/index.html
@@ -1251,8 +1251,7 @@
                                 <h3>SCHEDULE A CALL!</h3>
                                 <p>Schedule a call and get to know everything about your next best choice!</p>
                                 <div class="fr">
-                                    <div style="display: inline-block;">
-                                        
+                                    <div style="display: inline; margin: auto;">
                                         <a href="#home" class="subS">Fill The Form</a>
                                     </div>
                                 </div>
