--- a/Public/index.html
+++ b/Public/index.html
@@ -940,8 +940,8 @@
                         </div>
                         <div class="element col-sm-4 gall 2bhk">
                             <div class="project_box">
-                                <a class="plS" href="images/prettyPhotoImages/rohan.jpeg" rel="prettyPhoto[gallery2]">
-                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/rohan.jpeg" alt="pic1 Gallery" />
+                                <a class="plS" href="images/prettyPhotoImages/parth.jpeg" rel="prettyPhoto[gallery2]">
+                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/parth.jpeg" alt="pic1 Gallery" />
                                 </a>
                                 <div class="view project_descr">
                                     <h3><a href="#"style="font-size: 20px; font-weight: bold;">Parth KIONA</a></h3>
@@ -956,8 +956,8 @@
                         </div>
                         <div class="element col-sm-4 gall 2bhk">
                             <div class="project_box">
-                                <a class="plS" href="images/prettyPhotoImages/rohan.jpeg" rel="prettyPhoto[gallery2]">
-                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/rohan.jpeg" alt="pic1 Gallery" />
+                                <a class="plS" href="images/prettyPhotoImages/godrej.jpeg" rel="prettyPhoto[gallery2]">
+                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/godrej.jpeg" alt="pic1 Gallery" />
                                 </a>
                                 <div class="view project_descr">
                                     <h3><a href="#"style="font-size: 20px; font-weight: bold;">Godrej The Gale</a></h3>
@@ -976,8 +976,8 @@
 
                         <div class="element col-sm-4 gall 2bhk 4bhk duplex">
                             <div class="project_box">
-                                <a class="plS" href="images/prettyPhotoImages/rohan.jpeg" rel="prettyPhoto[gallery2]">
-                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/rohan.jpeg" alt="pic1 Gallery" />
+                                <a class="plS" href="images/prettyPhotoImages/new2.jpg" rel="prettyPhoto[gallery2]">
+                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/new2.jpg" alt="pic1 Gallery" />
                                 </a>
                                 <div class="view project_descr">
                                     <h3><a href="#"style="font-size: 20px; font-weight: bold;">Hinjewadi New Launch</a></h3>
@@ -992,8 +992,8 @@
                         </div>
                         <div class="element col-sm-4 gall 2bhk">
                             <div class="project_box">
-                                <a class="plS" href="images/prettyPhotoImages/rohan.jpeg" rel="prettyPhoto[gallery2]">
-                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/rohan.jpeg" alt="pic1 Gallery" />
+                                <a class="plS" href="images/prettyPhotoImages/global.jpeg" rel="prettyPhoto[gallery2]">
+                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/global.jpeg" alt="pic1 Gallery" />
                                 </a>
                                 <div class="view project_descr">
                                     <h3><a href="#"style="font-size: 20px; font-weight: bold;">Global Inspira</a></h3>
@@ -1008,8 +1008,8 @@
                         </div>
                         <div class="element col-sm-4 gall 2bhk 4bhk">
                             <div class="project_box">
-                                <a class="plS" href="images/prettyPhotoImages/rohan.jpeg" rel="prettyPhoto[gallery2]">
-                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/rohan.jpeg" alt="pic1 Gallery" />
+                                <a class="plS" href="images/prettyPhotoImages/sps.jpeg" rel="prettyPhoto[gallery2]">
+                                    <img class="img-responsive picsGall" src="images/prettyPhotoImages/sps.jpeg" alt="pic1 Gallery" />
                                 </a>
                                 <div class="view project_descr">
                                     <h3><a href="#"style="font-size: 20px; font-weight: bold;">Shapoorji Pallonji Sensorium</a></h3>
@@ -1145,7 +1145,7 @@
                                 <option value="VTP">VTP</option>
                                 <option value="Westwind">Westwind</option>
                                 <option value="Pride">Pride</option>
-                                <option value="Rohan">Rohan</option>
+                                <option value="Rohan">Other</option>
                             </select>
                     
                             <p class="col-md-14 col-xs-12 property"></p>
